syntax = "proto3";

package holocron.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "holocron.v1";

// ============================================================================
// 1. TEMPLATE DEFINITIONS (The "Form Builder" side)
// ============================================================================

message CeremonyTemplate {
  string id = 1;
  string team_id = 2; // Which team owns this ceremony
  string title = 3;
  string description = 4;
  repeated Item items = 5;
  
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Item {
  string item_id = 1; // Unique ID for drag-and-drop reordering & response tracking
  string title = 2;
  string description = 3;

  // Polymorphic item payload
  oneof kind {
    QuestionItem question_item = 4;
    QuestionGroupItem question_group_item = 5;
    PageBreakItem page_break_item = 6;
    TextItem text_item = 7;
    ImageItem image_item = 8;
    VideoItem video_item = 9;
  }
}

// -- Layout & Media Items --

message PageBreakItem {
  // Can be expanded later for conditional logic (e.g., "Go to section 2 based on answer")
}

message TextItem {
  // Just static text on the page, title/desc are handled by the parent Item
}

message ImageItem {
  string image_url = 1;
  string alt_text = 2;
}

message VideoItem {
  string video_url = 1;
  string caption = 2;
}

// -- Question Items --

message QuestionGroupItem {
  repeated Question questions = 1;
  // E.g., a grid of radio buttons where the columns are the same for multiple rows
}

message QuestionItem {
  Question question = 1;
}

message Question {
  string question_id = 1; // Used to map answers back to this specific question
  bool required = 2;

  oneof type {
    TextQuestion text_question = 3;
    ChoiceQuestion choice_question = 4;
    ScaleQuestion scale_question = 5;
    FileUploadQuestion file_upload_question = 6;
  }
}

message TextQuestion {
  bool paragraph = 1; // If true, render a <textarea>. If false, <input type="text">
}

message ChoiceQuestion {
  enum Type {
    TYPE_UNSPECIFIED = 0; 
    TYPE_RADIO = 1;
    TYPE_CHECKBOX = 2;
    TYPE_DROP_DOWN = 3;
  }
  Type type = 1;
  repeated Option options = 2;
}

message Option {
  string value = 1;
  bool is_other = 2; // If true, frontend renders an "Other: [_____]" text input
}

message ScaleQuestion {
  int32 low = 1;
  int32 high = 2;
  string low_label = 3;  // e.g., "Not Confident"
  string high_label = 4; // e.g., "Very Confident"
}

message FileUploadQuestion {
  int32 max_files = 1;
  int64 max_file_size_bytes = 2;
  repeated string allowed_mime_types = 3; // e.g., "application/pdf", "image/png"
}

// ============================================================================
// 2. RESPONSE DEFINITIONS (The "Submission" side)
// ============================================================================

message CeremonyResponse {
  string response_id = 1;
  string ceremony_template_id = 2;
  string user_id = 3; // The team member submitting
  
  google.protobuf.Timestamp submitted_at = 4;
  
  // A map is highly efficient here. 
  // Key = question_id, Value = The user's answer.
  map<string, Answer> answers = 5; 
}

message Answer {
  oneof kind {
    TextAnswer text_answer = 1;
    ChoiceAnswer choice_answer = 2;
    ScaleAnswer scale_answer = 3;
    FileUploadAnswer file_upload_answer = 4;
  }
}

message TextAnswer {
  string value = 1;
}

message ChoiceAnswer {
  // Repeated to support CHECKBOX (multiple selections). 
  // RADIO/DROP_DOWN will just have one item here.
  repeated string values = 1; 
}

message ScaleAnswer {
  int32 value = 1;
}

message FileUploadAnswer {
  // URLs or storage bucket paths to the uploaded files
  repeated string file_uris = 1; 
}

// ============================================================================
// 3. RPC SERVICES (The API Contract)
// ============================================================================

service CeremonyService {
  // Testing
  rpc Ping(PingRequest) returns (PingResponse);

  // Template Management
  rpc CreateCeremonyTemplate(CreateCeremonyTemplateRequest) returns (CreateCeremonyTemplateResponse);
  rpc GetCeremonyTemplate(GetCeremonyTemplateRequest) returns (GetCeremonyTemplateResponse);
  rpc ListCeremonyTemplates(ListCeremonyTemplatesRequest) returns (ListCeremonyTemplatesResponse);

  // Response Management
  rpc SubmitCeremonyResponse(SubmitCeremonyResponseRequest) returns (SubmitCeremonyResponseResponse);
  rpc ListCeremonyResponses(ListCeremonyResponsesRequest) returns (ListCeremonyResponsesResponse);
}

// -- Service Messages --

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message CreateCeremonyTemplateRequest {
  // The template to create. The ID will be generated by the server.
  CeremonyTemplate template = 1; 
}

message GetCeremonyTemplateRequest {
  string template_id = 1;
}

message ListCeremonyTemplatesRequest {
  string team_id = 1;
  // Standard Google API pagination
  int32 page_size = 2; 
  string page_token = 3;
}

message ListCeremonyTemplatesResponse {
  repeated CeremonyTemplate templates = 1;
  string next_page_token = 2;
}

message SubmitCeremonyResponseRequest {
  CeremonyResponse response = 1;
}

message ListCeremonyResponsesRequest {
  string ceremony_template_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListCeremonyResponsesResponse {
  repeated CeremonyResponse responses = 1;
  string next_page_token = 2;
}

message CreateCeremonyTemplateResponse {
  CeremonyTemplate template = 1; 
}

message GetCeremonyTemplateResponse {
  CeremonyTemplate template = 1;
}

message SubmitCeremonyResponseResponse {
  CeremonyResponse response = 1;
}

